hubot customisation start

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "antzfarmbot",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "author": "Ant Radford <ant.radford@gmail.com>",
-  "description": "A simple helpful robot for your Company",
+  "description": "A hubot powered, helpful little robot for your The Antz Farm Slack service",
   "dependencies": {
     "hubot": "^2.19.0",
     "hubot-diagnostics": "0.0.1",
